# covid19track

./: LICENSE  README.rst  app.py  model_predict.py  requirements.txt  setup.cfg
templates/: index.html  results.html
