[metadata]
name = covid19track
summary = Prediction App for COVID-19
description-file =
    README.rst
author = Manjeet Singh Bhatia
author-email = manjeet.bhatia@pcc.edu
home-page = https://docs.openstack.org/covid19track/latest/
classifier =
    Environment :: Covid19Track
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    covid19track

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_releasenotes]
build-dir = releasenotes/build
source-dir = releasenotes/source
all_files = 1

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = covid19track/locale/covid19track.pot

[compile_catalog]
directory = covid19track/locale
domain = covid19track

[update_catalog]
domain = covid19track
output_dir = covid19track/locale
input_file = covid19track/locale/covid19track.pot

[wheel]
universal = 1
